--- a/erp.html
+++ b/erp.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <h1>Practica ERP</h1>
+  <script src="BaseException.js"></script>
   <script src="objectsErp.js"></script> 
-  <script src="erp.js"></script> 
+  <script src="erp.js"></script>
+  <script src="test.js"></script> 
 </body>
 </html>
